update jsonschema
